--- a/index.ipynb
+++ b/index.ipynb
@@ -1,1 +1,107 @@
-{"cells": [{"cell_type": "markdown", "metadata": {}, "source": ["# SQL Interview Questions  - Quiz\n", "\n", "\n", "## Introduction\n", "\n", "This quiz contains questions on topics you can expect to see in an interview pertaining to SQL and Relational Databases. Some of them are multiple choice, while some are short answer. For these short answer questions, double click on the Jupyter Notebook and type your answer below the line. \n", "\n", "## Question 1\n", "\n", "What are the 4 main datatypes in SQLite3? Can we use other common types from other kinds of SQL?\n", "\n", "Type your answer below this line:\n", "_______________________________________________________________________________________________________________________________\n", "\n", "\n", "\n", "\n", "\n", "## Question 2\n", "\n", "Explain the relationship between **Primary Keys** and **Foreign Keys**.\n", "\n", "Type your answer below this line:\n", "_______________________________________________________________________________________________________________________________\n", "\n", "\n", "\n", "\n", "\n", "## Question 3\n", "\n", "Explain the different types of relationships entities can have in a SQL database. \n", "\n", "Type your answer below this line:\n", "_______________________________________________________________________________________________________________________________\n", "\n", "\n", "## Question 4\n", "\n", "Explain the various types of JOINs possible with SQL. \n", "\n", "Type your answer below this line:\n", "_______________________________________________________________________________________________________________________________\n", "\n", "\n", "\n", "## Question 5\n", "\n", "Explain the relationship between Aggregate functions and GROUP BY statements.\n", "\n", "Type your answer below this line:\n", "_______________________________________________________________________________________________________________________________\n", "\n", "\n", "\n", "## Question 6\n", "\n", "What role do Associative Entities play (JOIN Tables) in many-to-many JOINs?\n", "\n", "\n", "Type your answer below this line:\n", "_______________________________________________________________________________________________________________________________\n", "\n", "\n", "\n", "## Summary\n", "\n", "In this lesson, we practiced answering open-ended interview questions for SQL and Relational Databases. "]}], "metadata": {"kernelspec": {"display_name": "Python 3", "language": "python", "name": "python3"}, "language_info": {"codemirror_mode": {"name": "ipython", "version": 3}, "file_extension": ".py", "mimetype": "text/x-python", "name": "python", "nbconvert_exporter": "python", "pygments_lexer": "ipython3", "version": "3.7.3"}}, "nbformat": 4, "nbformat_minor": 2}
+{
+ "cells": [
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# SQL Interview Questions  - Quiz\n",
+    "\n",
+    "\n",
+    "## Introduction\n",
+    "\n",
+    "This quiz contains questions on topics you can expect to see in an interview pertaining to SQL and Relational Databases. Some of them are multiple choice, while some are short answer. For these short answer questions, double click on the Jupyter Notebook and type your answer below the line. \n",
+    "\n",
+    "## Question 1\n",
+    "\n",
+    "What are the 4 main datatypes in SQLite3? Can we use other common types from other kinds of SQL?\n",
+    "\n",
+    "Type your answer below this line:\n",
+    "_______________________________________________________________________________________________________________________________\n",
+    "1) Text 2) Integer 3) Real 4) Blob\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "## Question 2\n",
+    "\n",
+    "Explain the relationship between **Primary Keys** and **Foreign Keys**.\n",
+    "\n",
+    "Type your answer below this line:\n",
+    "_______________________________________________________________________________________________________________________________\n",
+    "A primary key is a unique identifier for a table that has to be comprised of unique values for that column. The primary key value is stored in an index and can neither be blank or null. A foriegn key is a key that refers to a  primary key that appears on a another table. \n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "## Question 3\n",
+    "\n",
+    "Explain the different types of relationships entities can have in a SQL database. \n",
+    "\n",
+    "Type your answer below this line:\n",
+    "_______________________________________________________________________________________________________________________________\n",
+    "The different types of relationships are one to one in which one record in the first table corresponds to one record in the second table and vice versa, one to many where one record on the first table relates to many records on the second table and records on the second table table only relate to one record on the first table, and lastly many to many where one record on the first table relates to many in the second table and one in the second table relates to many in the first table.\n",
+    "\n",
+    "\n",
+    "## Question 4\n",
+    "\n",
+    "Explain the various types of JOINs possible with SQL. \n",
+    "\n",
+    "Type your answer below this line:\n",
+    "_______________________________________________________________________________________________________________________________\n",
+    "Inner join, selects all records from two tables in which the join condition is met. Left join selects all records from left table and all records from both tables in which join condition is met. Right join selects all records from right table and all records from both tables in which join condition is met. Full join selects all records from both tables whether join conditions are met or not. \n",
+    "\n",
+    "\n",
+    "## Question 5\n",
+    "\n",
+    "Explain the relationship between Aggregate functions and GROUP BY statements.\n",
+    "\n",
+    "Type your answer below this line:\n",
+    "_______________________________________________________________________________________________________________________________\n",
+    "Group by statements arrange rows into a specified order and the aggregate functions return the specified summary for that row or group. \n",
+    "\n",
+    "\n",
+    "## Question 6\n",
+    "\n",
+    "What role do Associative Entities play (JOIN Tables) in many-to-many JOINs?\n",
+    "\n",
+    "\n",
+    "Type your answer below this line:\n",
+    "_______________________________________________________________________________________________________________________________\n",
+    "Associative entities contain associative relationship attributes that are attributes of the association between two tables and not representative of values in either of the individual joined tables. \n",
+    "\n",
+    "\n",
+    "## Summary\n",
+    "\n",
+    "In this lesson, we practiced answering open-ended interview questions for SQL and Relational Databases. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  }
+ ],
+ "metadata": {
+  "kernelspec": {
+   "display_name": "Python 3",
+   "language": "python",
+   "name": "python3"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.6.6"
+  }
+ },
+ "nbformat": 4,
+ "nbformat_minor": 2
+}
